--- a/CAPM_IVOL.ipynb
+++ b/CAPM_IVOL.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8451045d",
+   "id": "20e5149c",
    "metadata": {},
    "source": [
     "___\n",
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4b7e1557",
+   "id": "3a18a2bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25967c0a",
+   "id": "619ed285",
    "metadata": {},
    "source": [
     "* Set the methods to import equity prices (**/dd/eod/equity/prices**) and implied volatility (**/dd/eod/equity/ivx**) data"
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a987811",
+   "id": "44bb3afe",
    "metadata": {},
    "source": [
     "* Set the query parameters:\n",
@@ -75,7 +75,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "instruments = {'AAPL': 'Apple', 'MSFT': 'Microsoft', 'AMZN' : 'Amazon', 'GOOG': 'Google', 'META': 'Facebook', 'NFLX': 'Netflix' , 'NVDA': 'NVIDIA', 'SPX': 'SP500', 'NDX': 'NASDAQ'}\n",
+    "instruments = {'AAPL': 'Apple', 'MSFT': 'Microsoft', 'AMZN' : 'Amazon', 'GOOG': 'Google', 'META': 'Facebook', \\\n",
+    "               'NFLX': 'Netflix' , 'NVDA': 'NVIDIA', 'SPX': 'SP500', 'NDX': 'NASDAQ'}\n",
     "\n",
     "start = '2020-07-01'\n",
     "end   = '2021-06-30'\n",
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc150b9f",
+   "id": "a7712c27",
    "metadata": {},
    "source": [
     "* Start populating the equity and implied volatility dataframes, by extracting:\n",
@@ -98,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "33ab5ffb",
+   "id": "a4caabb5",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1698fbf9",
+   "id": "cf46ef02",
    "metadata": {},
    "source": [
     "* Optionally, you may choose to save the results in a csv file"
@@ -155,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5379677f",
+   "id": "57879fe0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92ac82f6",
+   "id": "9bb008d6",
    "metadata": {},
    "source": [
     "___\n",
@@ -202,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13a45471",
+   "id": "089662b5",
    "metadata": {},
    "source": [
     "___\n",
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85612104",
+   "id": "ad3daccb",
    "metadata": {},
    "source": [
     "___\n",
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "221f6e51",
+   "id": "d9abddb4",
    "metadata": {},
    "source": [
     "___\n",
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8517de6",
+   "id": "f760ba5d",
    "metadata": {},
    "source": [
     "___\n",
@@ -433,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36928472",
+   "id": "a8302144",
    "metadata": {},
    "source": [
     "___\n",
@@ -568,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31c7756b",
+   "id": "93972641",
    "metadata": {},
    "source": [
     "___\n",
@@ -621,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97786786",
+   "id": "753efd12",
    "metadata": {},
    "source": [
     "___\n",
@@ -789,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f55c2bba",
+   "id": "44d54381",
    "metadata": {},
    "source": [
     "___\n",
