Auto-ARIMA-GARCH

--- a/auto_arima_garch.ipynb
+++ b/auto_arima_garch.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "449de3f1",
+   "id": "1e9ac849",
    "metadata": {},
    "source": [
-    "# Make necessary imports"
+    "# Make necessary imports "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4ed4e0f4",
+   "id": "19d4633b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d60a741",
+   "id": "9807e1b9",
    "metadata": {},
    "source": [
     "# Login to the IVolatility API"
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "500a196f",
+   "id": "5c5a41a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,20 +48,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72cd70cd",
+   "id": "21cf0738",
    "metadata": {},
    "source": [
     "# Load SPX data from the IVolatility API\n",
-    "* Set the method from which to import SPX prices:\n",
-    "    * **/dd/eod/equity/prices**\n",
-    "* We'll use 2.5 years of time-series data for our model, so let's load SPX prices for the following period:\n",
+    "* We'll be importing end-of-day SPX prices from:\n",
+    "    * **/equities/eod/stocks-prices**\n",
+    "* And using 2.5 years of time-series data for our model, let's load SPX prices for the following period:\n",
     "    * **Jan. 1, 2020 - Jun. 30, 2022**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "44bdfcfa",
+   "id": "39c3298c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f551450d",
+   "id": "d552b07e",
    "metadata": {},
    "source": [
     "___\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7bd6823f",
+   "id": "142e297b",
    "metadata": {},
    "outputs": [
     {
@@ -102,51 +102,50 @@
       " ARIMA(0,1,3)(0,0,0)[0] intercept   : AIC=3876.975, Time=0.09 sec\n",
       " ARIMA(1,1,0)(0,0,0)[0] intercept   : AIC=3879.476, Time=0.04 sec\n",
       " ARIMA(1,1,1)(0,0,0)[0] intercept   : AIC=3877.919, Time=0.08 sec\n",
-      " ARIMA(1,1,2)(0,0,0)[0] intercept   : AIC=3877.092, Time=0.18 sec\n",
+      " ARIMA(1,1,2)(0,0,0)[0] intercept   : AIC=3877.092, Time=0.17 sec\n",
       " ARIMA(1,1,3)(0,0,0)[0] intercept   : AIC=3878.569, Time=0.32 sec\n",
       " ARIMA(2,1,0)(0,0,0)[0] intercept   : AIC=3875.673, Time=0.06 sec\n",
       " ARIMA(2,1,1)(0,0,0)[0] intercept   : AIC=3877.611, Time=0.12 sec\n",
-      " ARIMA(2,1,2)(0,0,0)[0] intercept   : AIC=3878.957, Time=0.26 sec\n",
+      " ARIMA(2,1,2)(0,0,0)[0] intercept   : AIC=3878.957, Time=0.25 sec\n",
       " ARIMA(2,1,3)(0,0,0)[0] intercept   : AIC=3880.477, Time=0.62 sec\n",
       " ARIMA(3,1,0)(0,0,0)[0] intercept   : AIC=3877.542, Time=0.06 sec\n",
       " ARIMA(3,1,1)(0,0,0)[0] intercept   : AIC=3856.296, Time=0.35 sec\n",
-      " ARIMA(3,1,2)(0,0,0)[0] intercept   : AIC=3880.005, Time=0.43 sec\n",
+      " ARIMA(3,1,2)(0,0,0)[0] intercept   : AIC=3880.005, Time=0.44 sec\n",
       "\n",
       "Best model:  ARIMA(3,1,1)(0,0,0)[0] intercept\n",
-      "Total fit time: 2.778 seconds\n"
+      "Total fit time: 2.766 seconds\n"
      ]
     }
    ],
    "source": [
-    "model = pm.auto_arima(close_prices, start_p=1, \n",
-    "                                    start_q=1,\n",
+    "model = pm.auto_arima(close_prices, start_p=1, start_q=1,\n",
     "                                    test='adf',\n",
-    "                                    max_p=3,\n",
-    "                                    max_q=3,\n",
+    "                                    max_p=3, \n",
+    "                                    max_q=3, \n",
     "                                    m=0,\n",
-    "                                    start_P=0,\n",
+    "                                    start_P=0, \n",
     "                                    seasonal=False,\n",
-    "                                    d=None,\n",
-    "                                    D=1,\n",
+    "                                    d=None, \n",
+    "                                    D=1, \n",
     "                                    trace=True,\n",
-    "                                    error_action='ignore',\n",
-    "                                    suppress_warnings=True,\n",
+    "                                    error_action='ignore',  \n",
+    "                                    suppress_warnings=True, \n",
     "                                    stepwise=False)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c9eff346",
+   "id": "f252757e",
    "metadata": {},
    "source": [
     "___\n",
-    "> Print ARIMA results"
+    "> Print Auto-ARIMA results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3beed7ff",
+   "id": "1156f847",
    "metadata": {},
    "outputs": [
     {
@@ -161,10 +160,10 @@
        "  <th>Model:</th>           <td>SARIMAX(3, 1, 1)</td> <th>  Log Likelihood     </th> <td>-1922.148</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>            <td>Wed, 17 Aug 2022</td> <th>  AIC                </th> <td>3856.296</td> \n",
+       "  <th>Date:</th>            <td>Thu, 01 Sep 2022</td> <th>  AIC                </th> <td>3856.296</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                <td>05:37:55</td>     <th>  BIC                </th> <td>3882.952</td> \n",
+       "  <th>Time:</th>                <td>17:52:21</td>     <th>  BIC                </th> <td>3882.952</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Sample:</th>                  <td>0</td>        <th>  HQIC               </th> <td>3866.651</td> \n",
@@ -221,8 +220,8 @@
        "==============================================================================\n",
        "Dep. Variable:                      y   No. Observations:                  629\n",
        "Model:               SARIMAX(3, 1, 1)   Log Likelihood               -1922.148\n",
-       "Date:                Wed, 17 Aug 2022   AIC                           3856.296\n",
-       "Time:                        05:37:55   BIC                           3882.952\n",
+       "Date:                Thu, 01 Sep 2022   AIC                           3856.296\n",
+       "Time:                        17:52:21   BIC                           3882.952\n",
        "Sample:                             0   HQIC                          3866.651\n",
        "                                - 629                                         \n",
        "Covariance Type:                  opg                                         \n",
@@ -258,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7371c753",
+   "id": "20f699cc",
    "metadata": {},
    "source": [
     "___\n",
@@ -268,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5505bcef",
+   "id": "0d924dc0",
    "metadata": {},
    "outputs": [
     {
@@ -291,17 +290,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "495ce5bf",
+   "id": "02de60c9",
    "metadata": {},
    "source": [
     "___\n",
-    "> Calculate ARIMA residuals"
+    "> Get ARIMA residuals"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "11670c8a",
+   "id": "25df99e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d99b1358",
+   "id": "cfe8eb61",
    "metadata": {},
    "source": [
     "___\n",
@@ -321,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3910286c",
+   "id": "9f2e188d",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af874b85",
+   "id": "d1de35a0",
    "metadata": {},
    "source": [
     "___\n",
@@ -364,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b1845563",
+   "id": "b7c03f92",
    "metadata": {},
    "outputs": [
     {
@@ -391,10 +390,10 @@
        "  <th></th>                        <td></td>          <th>  No. Observations:  </th>     <td>629</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>           <td>Wed, Aug 17 2022</td>  <th>  Df Residuals:      </th>     <td>628</td>   \n",
+       "  <th>Date:</th>           <td>Thu, Sep 01 2022</td>  <th>  Df Residuals:      </th>     <td>628</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>               <td>05:37:55</td>      <th>  Df Model:          </th>      <td>1</td>    \n",
+       "  <th>Time:</th>               <td>17:52:22</td>      <th>  Df Model:          </th>      <td>1</td>    \n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
@@ -433,8 +432,8 @@
        "Distribution:                  Normal   AIC:                           3767.32\n",
        "Method:            Maximum Likelihood   BIC:                           3785.10\n",
        "                                        No. Observations:                  629\n",
-       "Date:                Wed, Aug 17 2022   Df Residuals:                      628\n",
-       "Time:                        05:37:55   Df Model:                            1\n",
+       "Date:                Thu, Sep 01 2022   Df Residuals:                      628\n",
+       "Time:                        17:52:22   Df Model:                            1\n",
        "                                 Mean Model                                \n",
        "===========================================================================\n",
        "                 coef    std err          t      P>|t|     95.0% Conf. Int.\n",
@@ -464,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0b623e0",
+   "id": "4f02aad6",
    "metadata": {},
    "source": [
     "___\n",
@@ -474,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "66765ac7",
+   "id": "782f7ee8",
    "metadata": {},
    "outputs": [
     {
@@ -498,19 +497,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b649f4c",
+   "id": "5967a4ca",
    "metadata": {},
    "source": [
     "___\n",
     "# Predicting the S&P 500\n",
-    "## We will now use the ARIMA-GARCH model to make a 90-day forecast\n",
+    "### We will now use the Auto-ARIMA-GARCH model from above to make a 90 day forecast\n",
+    "\n",
     "> Set the prediction period and index values for the prediction time-series"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "07179b90",
+   "id": "662fe9ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ab73791",
+   "id": "12de3167",
    "metadata": {},
    "source": [
     "> Use ARIMA to predict $\\mu$"
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1bb3381c",
+   "id": "a70eeaf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61db0f61",
+   "id": "f8cfed1b",
    "metadata": {},
    "source": [
     "> Use GARCH to predict the residual"
@@ -547,19 +547,18 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ebe65695",
+   "id": "c6270871",
    "metadata": {},
    "outputs": [],
    "source": [
     "garch_forecast = garch_fitted.forecast(horizon=n_periods)\n",
     "predicted_et = garch_forecast.mean['h.01'].iloc[-1]\n",
-    "\n",
     "prediction = predicted_mu + predicted_et"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "32a6a6bd",
+   "id": "b8ace66d",
    "metadata": {},
    "source": [
     "> Rescale back"
@@ -568,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "53487e64",
+   "id": "278fea67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27cdf324",
+   "id": "004f8fb7",
    "metadata": {},
    "source": [
     "> Get the current SPX prices to compare with the model's prediction"
@@ -589,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "98cf486c",
+   "id": "1282ce05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,17 +602,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67cbfaaa",
+   "id": "499f039f",
    "metadata": {},
    "source": [
-    "## Plot prediction"
+    "### Plot prediction"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "32266e44",
-   "metadata": {},
+   "id": "312f0165",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -634,9 +635,9 @@
     "plt.plot(fitted_series, color='darkgreen', label='prediction')\n",
     "plt.plot(actual_close_prices, color='orange', label='actual prices')\n",
     "plt.legend(loc=\"upper left\")\n",
-    "plt.fill_between(lower_series.index,\n",
-    "                 lower_series,\n",
-    "                 upper_series,\n",
+    "plt.fill_between(lower_series.index, \n",
+    "                 lower_series, \n",
+    "                 upper_series, \n",
     "                 color='k', alpha=.15)\n",
     "plt.rcParams[\"figure.figsize\"] = (17,13)\n",
     "plt.show()"
@@ -644,19 +645,42 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61a42fbd",
+   "id": "22ea896d",
    "metadata": {},
    "source": [
-    "# Discussion"
+    "___\n",
+    "## Conclusion\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e9e9ef4",
+   "cell_type": "markdown",
+   "id": "6c6877b8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "After a rather disappointing first half of 2022 for the S&P 500, our Auto-ARIMA-GARCH model has predicted a turnaround in the second half of the year. \n",
+    "\n",
+    "The resulting 90-day forecast, as the upward-sloping green line on the chart above shows, indicates that the S&P should resume its bull-market trend. The model also presents boundaries of the upcoming price action with the grayed-out semi-circular area. \n",
+    "\n",
+    "And, as we see with the actual performance of the S&P 500 since beginning of July 2022, indicated by the orange curve, the US market has resumed its bull market and is staying within the bounds indicated by the model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7a71949",
+   "metadata": {},
+   "source": [
+    "### IVolatility API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bff83a0",
+   "metadata": {},
+   "source": [
+    "The IVolatility API offers a very rich abundance of financial datasets that can quickly and intuitively be loaded from the server directly into a pandas DataFrame locally. You may then use the data in a variety of avenues, such as modeling, back-testing, etc. One such way may just include making a powerful forecast of the world's most recognized and followed US market index, like the S&P 500.\n",
+    "\n",
+    "Happy researching!"
+   ]
   }
  ],
  "metadata": {
