--- a/CAPM_IVOL.ipynb
+++ b/CAPM_IVOL.ipynb
@@ -44,7 +44,7 @@
    "id": "619ed285",
    "metadata": {},
    "source": [
-    "* Set the methods to import equity prices (**/dd/eod/equity/prices**) and implied volatility (**/dd/eod/equity/ivx**) data"
+    "* Set the methods to import equity prices (**/equities/eod/stocks-prices**) and implied volatility (**/equities/eod/ivx**) data"
    ]
   },
   {
@@ -54,8 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "getMarketData = ivol.setMethod('/dd/eod/equity/prices')\n",
-    "getIVX = ivol.setMethod('/dd/eod/equity/ivx')"
+    "getMarketData = ivol.setMethod('/equities/eod/stocks-prices')\n",
+    "getIVX = ivol.setMethod('/equities/eod/ivx')"
    ]
   },
   {
